fix imagenes no se muestran en github

--- a/app.html
+++ b/app.html
@@ -48,7 +48,7 @@
 <!-- empieza el main -->
   <main>
     <div class="container-fluid">
-      <div class="row text-center d-flex align-items-center">
+      <div class="row p-5 text-center d-flex align-items-center">
         <div class="col-sm">
           <div><h1 class="p-2">Visitas auto guiadas divertidas, informativas y adaptadas a tu estilo.</h1></div>
           <div><p class="lead p-3">BApp propone una experiencia de descubrimiento de la ciudad flexible y completamente adaptable a tus necesidades.</p></div>
