--- a/blog.html
+++ b/blog.html
@@ -50,16 +50,16 @@
     <main>
         <!-- intro -->
         <div class="container-fluid">
-            <div class="row p-5">
+            <div class="row p-5 text-center">
                 <div class="col-sm">
                     <h1>Encuentra toda la información de Buenos Aires.</h1>
                 </div>
                 <div class="col-sm text-center">
-                    <p class="lead">Prepara tu visita y entérate de las novedades para aprovechar al máximo tu estadía en la ciudad.</p>
+                    <p class="lead">Prepara tu visita y entérate de las novedades para aprovechar al máximo tu estadía en la ciudad. No te pierdas las recomendaciones de nuestros escritores que conocen Buenos Aires mejor que nadie.</p>
                 </div>
             </div>
         </div>
-        <div class="div"><img src="/imagenes/banner2.png" class="img-fluid" alt="Banner decorativo con imagen de Buenos Aires"></div>
+        <div class="div"><img src="imagenes/banner2.png" class="img-fluid" alt="Banner decorativo con imagen de Buenos Aires"></div>
    
         <!-- articulo activo -->
         <div class="container-fluid article__active">
@@ -71,7 +71,7 @@
             <div class="article__active--body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi harum perspiciatis vero sunt rerum at debitis voluptatibus, facilis officia beatae suscipit facere incidunt necessitatibus dolores dicta maiores? Aperiam nesciunt aliquid repudiandae nihil veniam voluptas quae consequatur esse accusantium quisquam. Eaque explicabo facere delectus? Praesentium veniam quos nam dolor provident accusantium! In placeat itaque architecto sed earum nesciunt doloribus illum fugiat quam? Facilis aliquam, dicta voluptatibus sunt inventore molestias dolorum aspernatur quod! Maiores provident tempore quo sint? Esse quos odit cumque, itaque aut consectetur, adipisci cum inventore est labore nostrum nam veritatis minima at omnis, rem vitae! Reiciendis, quia officiis, soluta autem aut sed veritatis magni, at fugiat molestias nemo voluptatum blanditiis adipisci maxime? Nulla rerum mollitia quos illo a magni atque tempora, perferendis sequi in placeat non aliquid dolor debitis vel sunt tenetur voluptate nostrum totam maiores dolore, officiis temporibus eos ipsa? Molestias natus ea hic rem consequatur fugiat. Unde, quaerat deleniti reiciendis animi error non illo officiis iure eveniet amet nostrum tenetur blanditiis. Illo atque blanditiis delectus, eos odit eaque facilis odio assumenda, at repellat obcaecati, numquam amet? Magni earum temporibus maiores qui dolores velit debitis dicta aperiam provident iste quam harum, libero molestiae voluptate minima placeat illo labore praesentium mollitia? Laborum, quas commodi minus earum numquam corrupti blanditiis, molestiae quos provident eveniet assumenda sapiente rerum voluptatum ea praesentium pariatur. Odio veniam illum commodi. Dolorum at unde beatae praesentium nobis autem molestias laborum fugiat. Eius voluptas officia aliquid ipsum deserunt doloribus est recusandae, sit similique dolore aliquam libero culpa nulla optio illum nobis suscipit doloremque amet quia numquam quos. Provident placeat ut facilis veritatis reprehenderit sed sit cupiditate ea eaque repellat officiis nemo accusamus corporis sunt voluptas mollitia a numquam ratione dolores ad, ex iure officia? Doloremque nulla, architecto officia magnam rerum voluptate quam illo tempore unde consequatur beatae.</div>
             <div class="d-flex justify-content-center">
               <figure class="col-sm p-5 figure">
-                <img src="/imagenes/buenosaires5.jpeg" class="figure-img img-fluid rounded" alt="Jacarandas en flor en primavera">
+                <img src="imagenes/buenosaires5.jpeg" class="figure-img img-fluid rounded" alt="Jacarandas en flor en primavera">
                 <figcaption class="figure-caption">Jacarandas en flor en primavera</figcaption>
               </figure>
             </div>
