--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <main>
   <!-- intro -->
         <div class="container-fluid">
-            <div class="row p-5">
+            <div class="row p-5 text-center">
                 <div class="col-sm d-flex">
                     <h1>Buenos Aires en tu bolsillo.</h1>
                 </div>
@@ -107,7 +107,7 @@
 
     <!-- seccion descarga -->  
         <div class="container-fluid">
-          <div class="row text-center d-flex align-items-center">
+          <div class="row p-5 text-center d-flex align-items-center">
             <div class="col-sm">
               <div><h1 class="p-5">Visitas auto guiadas divertidas, informativas y adaptadas a tu estilo.</h1></div>
               <div><p class="lead p-3">BApp propone una experiencia de descubrimiento de la ciudad flexible y completamente adaptable a tus necesidades.</p></div>
