--- a/nosotros.html
+++ b/nosotros.html
@@ -49,7 +49,7 @@
    <main>
    <!-- intro -->
         <div class="container-fluid">
-          <div class="row p-5">
+          <div class="row p-5 text-center">
             <div class="col-sm">
               <h1>Creamos experiencias inolvidables.</h1>
             </div>
@@ -57,7 +57,7 @@
               <p class="lead">Somos un equipo de amantes de Buenos Aires y usamos la tecnología para crear experiencias únicas y adaptadas a las necesidades del viajero moderno.</p>
             </div>
           </div>
-          <div class="div"><img src="/imagenes/equipo.webp" class="img-fluid" alt="Foto de nuestro equipo"></div>
+          <div class="div"><img src="imagenes/equipo.webp" class="img-fluid" alt="Foto de nuestro equipo"></div>
           <div class="col p-5 text-center">Por dudad y consultas, escríbenos a <a href="#" class="link-primary">contacto@bapp.com.ar</a>.</div>
         </div>
        
