--- a/recorridos.html
+++ b/recorridos.html
@@ -49,7 +49,7 @@
     <main>
     <!-- intro -->
         <div class="container-fluid">
-            <div class="row p-5">
+            <div class="row p-5 text-center">
                 <div class="col-sm">
                     <h1>Recorre Buenos Aires a tu ritmo.</h1>
                 </div>
@@ -65,7 +65,7 @@
               <li>- No pierdas ninguna oportunidad de sacar fotos increíbles! </li>
           </ul>
       </div>
-        <div class="div"><img src="/imagenes/banner1.png" class="img-fluid" alt="Banner decorativo con imagen de Buenos Aires"></div>
+        <div class="div"><img src="imagenes/banner1.png" class="img-fluid" alt="Banner decorativo con imagen de Buenos Aires"></div>
    
     <!-- cards -->
           <div class="card mb-3 m-5" style="max-width: 100%;">
