--- a/preguntas.html
+++ b/preguntas.html
@@ -46,7 +46,7 @@
   <main>
         <!-- intro -->
         <div class="container-fluid">
-            <div class="row p-5">
+            <div class="row p-5 text-center">
                 <div class="col-sm">
                     <h1>No te pierdas nada de Buenos Aires.</h1>
                 </div>
@@ -55,7 +55,7 @@
                 </div>
             </div> 
         </div>
-        <div class="div"><img src="/imagenes/banner3.png" class="img-fluid" alt="Banner decorativo con imagen de Buenos Aires"></div>
+        <div class="div"><img src="imagenes/banner3.png" class="img-fluid" alt="Banner decorativo con imagen de Buenos Aires"></div>
            
         <!-- preguntas -->
         <div class="accordion pt-5" id="accordionExample">
